[package]
name = "include_dir_bytes"
version = "0.1.0"
authors = ["Ueki Masaru <masaru.ueki@itage.co.jp>"]

license = "MIT"
description = "Compiler-plugin to include bytes from files in a directory recursively"
repository = "https://github.com/maueki/include_dir.rs"

[lib]
name = "include_dir_bytes"
plugin = true

[dependencies]
glob = "0.2"
