[package]
name = "include_dir_bytes"
version = "0.2.1"
authors = ["Ueki Masaru <masaru.ueki@itage.co.jp>"]

license = "MIT"
description = "Read the directory recursively, and creates a `HashMap` with these contents at compile time with the file path as the key."
repository = "https://github.com/maueki/include_dir.rs"
readme = "README.md"

[lib]
name = "include_dir_bytes"
plugin = true

[dependencies]
glob = "0.2"
